--- a/archive/02-starting-with-data_old.Rmd
+++ b/archive/02-starting-with-data_old.Rmd
@@ -16,9 +16,6 @@ source("setup.R")
 > * Describe what a data frame is.
 > * Summarize the contents of a data frame.
 > * Use indexing to subset specific portions of data frames. 
-> * Describe what a factor is.
-> * Convert between strings and factors.
-> * Reorder and rename factors.
 > * Change how character strings are handled in a data frame.
 > * Format dates.
 
@@ -124,7 +121,7 @@ spreadsheets from your hard drive (or the web).
 A data frame is the representation of data in the format of a table where the
 columns are vectors that all have the same length. Because columns are
 vectors, each column must contain a single type of data (e.g., characters, integers,
-factors). For example, here is a figure depicting a data frame comprising a
+logical). For example, here is a figure depicting a data frame comprising a
 numeric, a character, and a logical vector.
 
 ![](./img/data-frame.svg)
@@ -312,162 +309,20 @@ In RStudio, you can use the autocompletion feature to get the full and correct n
 
 ## Factors
 
-```{r, echo=FALSE, purl=TRUE}
-### Factors
-```
-
-When we did `str(surveys)` we saw that several of the columns consist of
-integers. The columns `genus`, `species`, `sex`, `plot_type`, ... however, are
-of a special class called `factor`. Factors are very useful and actually
-contribute to making R particularly well suited to working with data. So we are
-going to spend a little time introducing them.
-
 Factors represent categorical data. They are stored as integers associated with labels and they can be ordered or unordered. While factors look (and often behave) like character vectors, they are actually treated as integer vectors by R. So you need to be very careful when treating them as strings.
-
-Once created, factors can only contain a pre-defined set of values, known as
-*levels*. By default, R always sorts levels in alphabetical order. For
-instance, if you have a factor with 2 levels:
-
-```{r, purl=TRUE}
-sex <- factor(c("male", "female", "female", "male"))
-```
-
-R will assign `1` to the level `"female"` and `2` to the level `"male"` (because
-`f` comes before `m`, even though the first element in this vector is
-`"male"`). You can see this by using the function `levels()` and you can find the
-number of levels using `nlevels()`:
-
-```{r, purl=FALSE}
-levels(sex)
-nlevels(sex)
-```
-
-Sometimes, the order of the factors does not matter, other times you might want
-to specify the order because it is meaningful (e.g., "low", "medium", "high"),
-it improves your visualization, or it is required by a particular type of
-analysis. Here, one way to reorder our levels in the `sex` vector would be:
-
-```{r, results=TRUE, purl=FALSE}
-sex # current order
-sex <- factor(sex, levels = c("male", "female"))
-sex # after re-ordering
-```
-
-In R's memory, these factors are represented by integers (1, 2, 3), but are more
-informative than integers because factors are self describing: `"female"`,
-`"male"` is more descriptive than `1`, `2`. Which one is "male"?  You wouldn't
-be able to tell just from the integer data. Factors, on the other hand, have
-this information built in. It is particularly helpful when there are many levels
-(like the species names in our example dataset).
-
-### Converting factors
-
-If you need to convert a factor to a character vector, you use
-`as.character(x)`.
-
-```{r, purl=FALSE}
-as.character(sex)
-```
-
-In some cases, you may have to convert factors where the levels appear as
-numbers (such as concentration levels or years) to a numeric vector. For
-instance, in one part of your analysis the years might need to be encoded as
-factors (e.g., comparing average weights across years) but in another part of
-your analysis they may need to be stored as numeric values (e.g., doing math
-operations on the years). This conversion from factor to numeric is a little
-trickier. The `as.numeric()` function returns the index values of the factor,
-not its levels, so it will result in an entirely new (and unwanted in this case)
-set of numbers. One method to avoid this is to convert factors to characters,
-and then to numbers.
-
-Another method is to use the `levels()` function. Compare:
-
-```{r, purl=TRUE}
-year_fct <- factor(c(1990, 1983, 1977, 1998, 1990))
-as.numeric(year_fct)               # Wrong! And there is no warning...
-as.numeric(as.character(year_fct)) # Works...
-as.numeric(levels(year_fct))[year_fct]    # The recommended way.
-```
-
-Notice that in the `levels()` approach, three important steps occur:
-
-* We obtain all the factor levels using `levels(year_fct)`
-* We convert these levels to numeric values using `as.numeric(levels(year_fct))`
-* We then access these numeric values using the underlying integers of the
-  vector `year_fct` inside the square brackets
-
-### Renaming factors
-
-When your data is stored as a factor, you can use the `plot()` function to get a
-quick glance at the number of observations represented by each factor
-level. Let's look at the number of males and females captured over the course of
-the experiment:
-
-```{r, purl=TRUE}
-## bar plot of the number of females and males captured during the experiment:
-plot(as.factor(surveys$sex))
-```
-
-In addition to males and females, there are about 1700 individuals for which the
-sex information hasn't been recorded. Additionally, for these individuals,
-there is no label to indicate that the information is missing or undetermined. Let's rename this
-label to something more meaningful. Before doing that, we're going to pull out
-the data on sex and work with that data, so we're not modifying the working copy
-of the data frame:
-
-```{r, results=TRUE, purl=FALSE}
-sex <- factor(surveys$sex)
-head(sex)
-levels(sex)
-levels(sex)[1] <- "undetermined"
-levels(sex)
-head(sex)
-```
-
-
-> ### Challenge
->
-> * Rename "F" and "M" to "female" and "male" respectively.
-> * Now that we have renamed the factor level to "undetermined", can you recreate the
->  barplot such that "undetermined" is last (after "male")?
->
-> ```{r, answer=TRUE, purl=FALSE}
-> levels(sex)[2:3] <- c("female", "male")
-> sex <- factor(sex, levels = c("female", "male", "undetermined"))
-> plot(sex)
-> ``` 
-
-
-```{r wrong-order, results='show', echo=FALSE, purl=TRUE}
-## Challenges
-##
-## * Rename "F" and "M" to "female" and "male" respectively.
-## * Now that we have renamed the factor level to "undetermined", can you recreate the
-##   barplot such that "undetermined" is last (after "male")
-```
-
 
 ### Using `stringsAsFactors = FALSE`
 
 By default, when building or importing a data frame, the columns that contain
-characters (i.e. text) are coerced (= converted) into factors. Depending on what you want to do with the data, you may want to keep these
+characters (i.e. text) are coerced (= converted) into factors. In most cases, it is preferable to set `stringsAsFactors = FALSE` when importing
+data and to convert as a factor only the columns that require this data
+type.
+Depending on what you want to do with the data, you may want to keep these
 columns as `character`. To do so, `read.csv()` and `read.table()` have an
 argument called `stringsAsFactors` which can be set to `FALSE`.
 
-In most cases, it is preferable to set `stringsAsFactors = FALSE` when importing
-data and to convert as a factor only the columns that require this data
-type.
+Or you can use the function `read_csv()` instead, which we will use going forward. 
 
-
-```{r, eval=FALSE, purl=TRUE}
-## Compare the difference between our data read as `factor` vs `character`.
-surveys <- read.csv("data_raw/portal_data_joined.csv", stringsAsFactors = TRUE)
-str(surveys)
-surveys <- read.csv("data_raw/portal_data_joined.csv", stringsAsFactors = FALSE)
-str(surveys)
-## Convert the column "plot_type" into a factor
-surveys$plot_type <- factor(surveys$plot_type)
-```
 
 
 > ### Challenge
@@ -632,6 +487,3 @@ head(missing_dates)
 
 Why did these dates fail to parse? If you had to use these data for your
 analyses, how would you deal with this situation?
-
-```{r, child="_page_built_on.Rmd"}
-```
